--- a/.github/workflows/Lean.yml
+++ b/.github/workflows/Lean.yml
@@ -106,7 +106,7 @@ jobs:
         ./scripts/feeds update -a 
         sed -i 's#GO_PKG_TARGET_VARS.*# #g' feeds/packages/utils/v2dat/Makefile 
         ./scripts/feeds install -a
-        cp -f .config openwrt/.config && make defconfig
+        cp -rf /. openwrt/. && make defconfig
         
     - name: Download package
       working-directory: ./openwrt
